; ModuleID = '/home/carl/AnghaBench/linux/sound/drivers/vx/extr_vx_uer.c_vx_modify_board_clock.c'
source_filename = "/home/carl/AnghaBench/linux/sound/drivers/vx/extr_vx_uer.c_vx_modify_board_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vx_core = type { i32 }
%struct.vx_rmh = type { i32* }

@CMD_MODIFY_CLOCK = common dso_local global i32 0, align 4
@CMD_MODIFY_CLOCK_S_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vx_core*, i32)* @vx_modify_board_clock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vx_modify_board_clock(%struct.vx_core* %0, i32 %1) #0 {
  %3 = alloca %struct.vx_core*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vx_rmh, align 8
  store %struct.vx_core* %0, %struct.vx_core** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @CMD_MODIFY_CLOCK, align 4
  %7 = call i32 @vx_init_rmh(%struct.vx_rmh* %5, i32 %6)
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load i32, i32* @CMD_MODIFY_CLOCK_S_BIT, align 4
  %12 = getelementptr inbounds %struct.vx_rmh, %struct.vx_rmh* %5, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = getelementptr inbounds i32, i32* %13, i64 0
  %15 = load i32, i32* %14, align 4
  %16 = or i32 %15, %11
  store i32 %16, i32* %14, align 4
  br label %17

17:                                               ; preds = %10, %2
  %18 = load %struct.vx_core*, %struct.vx_core** %3, align 8
  %19 = call i32 @vx_send_msg(%struct.vx_core* %18, %struct.vx_rmh* %5)
  ret i32 %19
}

declare dso_local i32 @vx_init_rmh(%struct.vx_rmh*, i32) #1

declare dso_local i32 @vx_send_msg(%struct.vx_core*, %struct.vx_rmh*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
